# comfyui-zerna-pack

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
prompts/: animals.txt  flux_styles_prompts.txt  sdxl_art_styles.txt
zerna/: prompt_generators.py
